--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test:ember": "ember test"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.16.0",
     "@ember/optional-features": "^2.0.0",
     "@ember/test-helpers": "^2.4.2",
     "@glimmer/component": "^1.0.4",
@@ -50,8 +51,6 @@
     "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
-    "ember-cli-typescript": "^3.0.0",
-    "ember-cli-typescript-blueprints": "^3.0.0",
     "ember-data": "~4.0.0-beta.2",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.1.1",
