--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,41 +1,41 @@
-name: CI
+# name: CI
 
-on:
-  push:
-    branches:
-      - main
-      - master
-  pull_request: {}
+# on:
+#   push:
+#     branches:
+#       - main
+#       - master
+#   pull_request: {}
 
-jobs:
-  lint:
-    name: "Lint"
-    runs-on: ubuntu-latest
+# jobs:
+#   lint:
+#     name: "Lint"
+#     runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v2
-      - name: Install Node
-        uses: actions/setup-node@v2
-        with:
-          node-version: 12.x
-          cache: npm
-      - name: Install Dependencies
-        run: npm ci
-      - name: Lint
-        run: npm run lint
+#     steps:
+#       - uses: actions/checkout@v2
+#       - name: Install Node
+#         uses: actions/setup-node@v2
+#         with:
+#           node-version: 12.x
+#           cache: npm
+#       - name: Install Dependencies
+#         run: npm ci
+#       - name: Lint
+#         run: npm run lint
 
-  test:
-    name: "Test"
-    runs-on: ubuntu-latest
+#   test:
+#     name: "Test"
+#     runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v2
-      - name: Install Node
-        uses: actions/setup-node@v2
-        with:
-          node-version: 12.x
-          cache: npm
-      - name: Install Dependencies
-        run: npm ci
-      - name: Run Tests
-        run: npm test
+#     steps:
+#       - uses: actions/checkout@v2
+#       - name: Install Node
+#         uses: actions/setup-node@v2
+#         with:
+#           node-version: 12.x
+#           cache: npm
+#       - name: Install Dependencies
+#         run: npm ci
+#       - name: Run Tests
+#         run: npm test
