--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-htmlbars": "^6.0.1",
     "ember-cli-inject-live-reload": "^2.1.0",
+    "ember-cli-postcss": "^7.0.2",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
     "ember-data": "~4.0.0",
@@ -69,9 +70,11 @@
     "eslint-plugin-qunit": "^7.1.0",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
+    "postcss-import": "^14.0.2",
     "prettier": "^2.5.1",
     "qunit": "^2.17.2",
     "qunit-dom": "^2.0.0",
+    "tailwindcss": "^3.0.5",
     "typescript": "^4.4.4",
     "webpack": "^5.52.1"
   },
