--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "@glimmer/component": "^1.0.4",
     "@glimmer/tracking": "^1.0.4",
     "@types/ember": "^3.16.5",
-    "@types/ember__test-helpers": "^2.0.2",
     "@types/ember-data": "^3.16.15",
     "@types/ember-data__adapter": "^3.16.1",
     "@types/ember-data__model": "^3.16.2",
     "@types/ember-data__serializer": "^3.16.1",
     "@types/ember-data__store": "^3.16.1",
     "@types/ember-qunit": "^3.4.15",
+    "@types/ember__test-helpers": "^2.0.2",
     "@types/qunit": "^2.11.2",
     "@types/rsvp": "^4.0.4",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
@@ -43,16 +43,16 @@
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "ember-auto-import": "^2.2.4",
-    "ember-cli": "~4.0.0-beta.4",
+    "ember-cli": "~4.0.1",
     "ember-cli-app-version": "^5.0.0",
-    "ember-cli-babel": "^7.26.6",
+    "ember-cli-babel": "^7.26.8",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-htmlbars": "^6.0.1",
     "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-postcss": "^7.0.2",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
-    "ember-data": "~4.0.0",
+    "ember-data": "~4.0.2",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.1.1",
     "ember-load-initializers": "^2.1.2",
@@ -60,13 +60,13 @@
     "ember-qunit": "^5.1.5",
     "ember-resolver": "^8.0.3",
     "ember-source": "~4.0.1",
-    "ember-template-lint": "^3.14.0",
+    "ember-template-lint": "^3.15.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-ember": "^10.5.8",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-qunit": "^7.1.0",
+    "eslint-plugin-qunit": "^7.2.0",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
     "postcss-import": "^14.0.2",
