--- a/package.json
+++ b/package.json
@@ -28,14 +28,15 @@
     "@ember/test-helpers": "^2.6.0",
     "@glimmer/component": "^1.0.4",
     "@glimmer/tracking": "^1.0.4",
+    "@mdi/svg": "^6.0.0",
     "@types/ember": "^3.16.5",
+    "@types/ember__test-helpers": "^2.0.2",
     "@types/ember-data": "^3.16.15",
     "@types/ember-data__adapter": "^3.16.1",
     "@types/ember-data__model": "^3.16.2",
     "@types/ember-data__serializer": "^3.16.1",
     "@types/ember-data__store": "^3.16.1",
     "@types/ember-qunit": "^3.4.15",
-    "@types/ember__test-helpers": "^2.0.2",
     "@types/qunit": "^2.11.2",
     "@types/rsvp": "^4.0.4",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
@@ -56,6 +57,7 @@
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.1.1",
     "ember-load-initializers": "^2.1.2",
+    "ember-mdi": "^0.9.0",
     "ember-page-title": "^7.0.0",
     "ember-qunit": "^5.1.5",
     "ember-resolver": "^8.0.3",
