--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "tests"
   },
   "scripts": {
-    "build": "ember build --environment=production",
+    "build": "npm run tailwind:build && ember build --environment=production",
     "lint": "npm-run-all --aggregate-output --continue-on-error --parallel \"lint:!(fix)\"",
     "lint:fix": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*:fix",
     "lint:hbs": "ember-template-lint .",
@@ -20,7 +20,9 @@
     "lint:js:fix": "eslint . --fix",
     "start": "ember serve",
     "test": "npm-run-all lint test:*",
-    "test:ember": "ember test"
+    "test:ember": "ember test",
+    "tailwind:build": "npx tailwindcss -c ./config/tailwind/tailwind.config.js -i ./config/tailwind/tailwind-input.css -o ./public/assets/tailwind.css",
+    "tailwind:watch": "npx tailwindcss -c ./config/tailwind/tailwind.config.js -i ./config/tailwind/tailwind-input.css -o ./public/assets/tailwind.css --watch"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.16.0",
@@ -30,13 +32,13 @@
     "@glimmer/tracking": "^1.0.4",
     "@mdi/svg": "^6.0.0",
     "@types/ember": "^3.16.5",
+    "@types/ember__test-helpers": "^2.0.2",
     "@types/ember-data": "^3.16.15",
     "@types/ember-data__adapter": "^3.16.1",
     "@types/ember-data__model": "^3.16.2",
     "@types/ember-data__serializer": "^3.16.1",
     "@types/ember-data__store": "^3.16.1",
     "@types/ember-qunit": "^3.4.15",
-    "@types/ember__test-helpers": "^2.0.2",
     "@types/qunit": "^2.11.2",
     "@types/rsvp": "^4.0.4",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
@@ -50,7 +52,6 @@
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-htmlbars": "^6.0.1",
     "ember-cli-inject-live-reload": "^2.1.0",
-    "ember-cli-postcss": "^7.0.2",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
     "ember-data": "~4.1.0",
@@ -75,7 +76,7 @@
     "prettier": "^2.5.1",
     "qunit": "^2.17.2",
     "qunit-dom": "^2.0.0",
-    "tailwindcss": "^3.0.5",
+    "tailwindcss": "^3.0.0",
     "typescript": "^4.4.4",
     "webpack": "^5.52.1"
   },
